--- a/style.css
+++ b/style.css
@@ -1,1 +1,4 @@
 /* All style elements for your extension go here */
+#telegram-connector-settings .sub-title.closed .sub-title-arrow {
+    transform: rotate(-90deg);
+}
